--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=7777
+server.port=1111
 server.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
+
 
 
 #Database
@@ -23,3 +24,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.check-template-location=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
